# FFT-UNN-WinterSchool

./: .gitignore  .gitmodules  CMakeLists.txt  How2CooleyTukey.md  README.md  build.sh
.github/workflows/: pipeline.yml
cmake/: common_configuration.cmake
docs/: How2Debug.md  InstallEnv.md  launch.json
examples/: CMakeLists.txt  defs.h  dft4.c
lib/: CMakeLists.txt
lib/include/: common_defs.h  dft.h
lib/src/: dft.c  dft16.c  dft2.c  dft32.c  dft4.c  dft6.c  dft8.c
perf/: CMakeLists.txt
perf/include/: perf_common.hpp
perf/src/: dft.cpp  dft16.cpp  dft2.cpp  dft32.cpp  dft4.cpp  dft6.cpp  dft8.cpp
test/: CMakeLists.txt
test/include/: test_common.hpp
test/src/: dft.cpp  main.cpp
